force-app/main/default/objects/Financial_Account__c/Financial_Account__c.object-meta.xml
<CustomObject>
    <description>Stores details about ACME bank customers financial accounts</description>
    <label>Financial Account</label>
    <nameField>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>