force-app/main/default/objects/Financial_Account__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Financial account number</description>
    <label>Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>