force-app/main/default/objects/Financial_Account__c/fields/Calculated_Balance__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Balance__c</fullName>
    <formula>Total_Credit_Amount__c  -  Total_Debit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>