force-app/main/default/objects/Financial_Account__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <label>Customer Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Customer Account can have only Spending, Savings, Credit or Loan Financial Accounts</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Spending, Savings, Credit, Loan</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Customer Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>