force-app/main/default/objects/Financial_Account__c/fields/Total_Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Debit_Amount__c</fullName>
    <label>Total Debit Amount</label>
    <summarizedField>Transaction_History__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction_History__c.Type__c</field>
        <operation>equals</operation>
        <value>Debit</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction_History__c.Financial_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>