force-app/main/default/objects/Financial_Account__c/recordTypes/Savings.recordType-meta.xml
<RecordType>
    <fullName>Savings</fullName>
    <active>true</active>
    <label>Savings</label>
</RecordType>