force-app/main/default/objects/Financial_Account__c/recordTypes/Smart.recordType-meta.xml
<RecordType>
    <fullName>Smart</fullName>
    <active>true</active>
    <label>Smart</label>
</RecordType>