force-app/main/default/objects/Financial_Account__c/recordTypes/Spending.recordType-meta.xml
<RecordType>
    <fullName>Spending</fullName>
    <active>true</active>
    <label>Spending</label>
</RecordType>